# dataengineer-transformations-python

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pylintrc  Dockerfile  LICENSE  Makefile  Pipfile  README-DOCKER.md  README-LOCAL.md  README.md  batect.cmd  batect.yml  citibike_ingest.py  go.ps1  go.sh  job_runner.py  pyproject.toml  requirements.txt  setup.py
.batect/pyspark/: Dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: docker-setup-test.yaml  local-setup-test.yaml
data-transformations/: daily_driver_main.py  wordcount_main.py
data-transformations/citibike/: DailyDriver.py
data_transformations/: citibike_main.py  daily_driver_main.py  wordcount_main.py
data_transformations/citibike/: CitibikeTransformer.py  DailyDriver.py  distance_transformer.py  ingest.py  utils.py
data_transformations/wordcount/: WordCount.py  utils.py  word_count_transformer.py
docs/: citibike.drawio
jobs/: citibike_distance_calculation.py  citibike_distance_calculation_havesine.py  citibike_ingest.py  distance_transformer.py  word_count.py  word_count_kalin.py  word_count_transformer.py
resources/citibike/: citibike_extension.csv
resources/word_count/: words.txt
scripts/: go.sh  install-with-colima.sh  install-with-docker-desktop.sh  install.bat  install.sh  install_choco.ps1  integration-test.sh  run-job.sh  spark-docker-tests.sh  style-checks.sh  unit-test.sh
scripts/mac_or_linux/: install-with-colima.sh  install-with-docker-desktop.sh  integration-test.sh  linting.sh  run-colima-integration-test.sh  run-colima-job.sh  run-colima-unit-test.sh  run-docker-deskop-job.sh  run-docker-desktop-integration-test.sh  run-docker-desktop-job.sh  run-docker-desktop-linting.sh  run-docker-desktop-unit-test.sh  run-job.sh  start-colima.sh  unit-test.sh
scripts/win/: install_with_docker_desktop.ps1  linting.ps1  run-docker-desktop-integration-test.ps1  run-docker-desktop-job.ps1  run-job.ps1  run-local-integration-test.ps1  run-local-unit-test.ps1  write-test.ps1
src/: job_runner.py  package.sh
src/test/citibike/: test_CitibikeTransformer.py  test_DailyDriver.py
src/test/citibike/data/: citibike.csv
src/test/wordcount/: test_WordCount.py  test_WordCountUtilsTest.py
src/test/wordcount/data/: words.txt
src/thoughtworks/: citibike_main.py  daily_driver_main.py  wordcount_main.py
src/thoughtworks/citibike/: CitibikeTransformer.py  utils.py
src/thoughtworks/wordcount/: WordCount.py  utils.py
tests/citibike/: __init__.py  test_CitibikeTransformer.py  test_DailyDriver.py  test_daily_driver.py  test_distance_transformer.py  test_ingest.py
tests/integration/: __init__.py  conftest.py  test_distance_transformer.py  test_ingest.py  test_validate_spark_environment.py  test_word_count.py  test_word_count_a.py  word_count_pytest.txt
tests/unit/: test_ingest.py
tests/wordcount/: test_WordCount.py  test_WordCountUtilsTest.py
wordcnt_output/: output.csv
