[tool.poetry]
name = "data_transformations"
version = "0.1.0"
description = "data transformations"
authors = ["ThoughtWorks <info@thoughtworks.com>"]
license = "Apache-License-2.0"

[tool.poetry.dependencies]
numpy = "^1.26.4"
pandas = "^1.5.3"
pyarrow = "^15.0.0"
pyspark = "^3.5.1"
pytest = "^7.4.0"
python = "^3.11"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
