[tool.poetry]
name = "data_transformations"
version = "0.1.0"
description = "data transformations"
authors = ["ThoughtWorks <info@thoughtworks.com>"]
license = "Apache-License-2.0"

[tool.poetry.dependencies]
numpy = "^1.20.2"
pandas = "^2.0.0"
pyarrow = "^12.0.0"
# This is pinned to stay in sync with the version
# That gets downloaded in `.gitpod.Dockerfile`
pyspark = "3.5.1"
python = "~3.11"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
pytest = "^6.2.4"
mypy = "^0.990"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
